--- a/src/app/videos/videos-list/videos-list.component.html
+++ b/src/app/videos/videos-list/videos-list.component.html
@@ -1,3 +1,6 @@
-<div class="flex bg-beige min-h-[52vh] flex-wrap justify-evenly gap-x-5 gap-y-10 w-full py-10">
+<!-- <div class="flex bg-beige min-h-[52vh] flex-wrap justify-evenly gap-x-5 gap-y-10 w-full py-10">
  <app-video-card *ngFor="let video of videos" [videoInfo]="video"></app-video-card>
+</div> -->
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 py-10 px-4 sm:px-8 md:px-15 lg:px-20 bg-beige">
+    <app-video-card *ngFor="let video of videos" [videoInfo]="video"></app-video-card>
 </div>
